Table under construction

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <br>
     <input type="radio" name="Languages" required value="Vue" id="Languages">
     <label for="Vue">Vue</label>
-    <br><br>
+    <br><br>🧰
     <label for="Courses">Course</label>
     <br><br>
     <!-- Way 2 start-->
@@ -51,7 +51,7 @@
         <option VALUE="fullstack" name="fullstack">Full Stack</option>
     </select>
     <br><br>
-    <textarea name="text"  id="" cols="30" rows="10"></textarea>
+    <textarea name="text" required id="" cols="30" rows="10"></textarea>
     <br><br>
     <label for="number">Phone Number</label>
     <input type="tel" required name="number">
