--- a/index1.html
+++ b/index1.html
@@ -7,13 +7,94 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>TABLES</h1>
+    <table border="1" width="100%">
+        <thead><tr>
+            <th>Firstname</th>
+            <th>Lastname</th>
+            <th>Age</th>
+            <th>Phone number</th>
+            <th>Pincode</th>
+        </tr></thead>
+        <tr>
+            <td>User First 1</td>
+            <td>User First 2</td>
+            <td>24</td>
+            <td>1234567890</td>
+            <td>56789</td>
+        </tr>
+        <tr>
+            <td>User First 1</td>
+            <td>User First 2</td>
+            <td>24</td>
+            <td></td>
+            <td>56789</td>
+        </tr>
+        <tr>
+            <td>User First 1</td>
+            <td>User First 2</td>
+            <td>24</td>
+            <td>1234567890</td>
+            <td></td>
+        </tr>
+    </table>
+    <br><br>
+    <table border="1px" width="100%">
+        <thead>
+            <tr>
+                <th>Course:</th>
+                <td>Elevation Acedemy</td>
+            </tr>
+        </thead>
+        <tr>
+            <th rowspan="2">Contact Number:</th>
+            <td>1234567890</td>
+        </tr>
+        <tr>
+            <td>1234567890</td>
+        </tr>
+    </table>
+    <br><br>
+    <table border="1px" width="100%">
+        <thead>
+            <tr>
+                <th>Course</th>
+                <th colspan="2">Contact Number</th>
+                <th>Date of commencement</th>
+            </tr>
+        </thead>
+        <tr>
+            <td>Elevation Acedemy</td>
+            <td>1234567890</td>
+            <td>2 August 2020</td>
+        </tr>
+        <tr>
+            <td>Elevation Acedemy</td>
+            <td>1234567890</td>
+            <td>2 August 2020</td>
+        </tr>
+        <tr>
+            <td>Elevation Acedemy</td>
+            <td>1234567890</td>
+            <td>2 August 2020</td>
+        </tr>
+    </table>
+    <br><br>
+    <table align="center" border="1px">
+        <tr>
+            <td bgcolor="silver">Name</td>
+            <td>John</td>
+            <td bgcolor="silver">Nick</td>
+            <td>Tim</td>
+        </tr>
+        <tr>
+            <td>Age</td>
+            <td bgcolor="silver">30</td>
+            <td>20</td>
+            <td bgcolor="silver">35</td>
+        </tr>
+    </table>
     <br>
-    <br>
-    <br>
-    <br>
-    <h3 align="center">Tables is under 👷🚧constraction🚧👷.</h3>
-    <center>
-        <a href="index.html">Go Back</a>
-    </center>
+    <a href="index.html">Go back</a>
 </body>
 </html>
